[package]
name = "gauntlet-program"
version = "0.1.0"
edition = "2018"
license = "WTFPL"
publish = false

[dependencies]
arrayref = "0.3.6"
thiserror = "1.0"
solana-program = "=1.7.14"
spl-token = {version = "3.2.0", features = ["no-entrypoint"]}

[features]
test-bpf = []

[dev-dependencies]
assert_matches = "1.4.0"
solana-program-test = "=1.7.14"
solana-sdk = "=1.7.14"
solana-validator = "=1.7.14"

[lib]
crate-type = ["cdylib", "lib"]
